--- a/images/open5gs/Dockerfile.ubi
+++ b/images/open5gs/Dockerfile.ubi
@@ -41,31 +41,36 @@ RUN dnf install -y \
 
 RUN pip3 install ninja && pip install meson
 
-RUN dnf localinstall -y \
-    https://rpmfind.net/linux/centos-stream/9-stream/CRB/x86_64/os/Packages/libtalloc-devel-2.3.4-1.el9.x86_64.rpm\
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/libmicrohttpd-0.9.72-4.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/BaseOS/x86_64/os/Packages/gnutls-3.7.6-20.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/gnutls-c++-3.7.6-20.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/gnutls-dane-3.7.6-20.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/BaseOS/x86_64/os/Packages/nettle-3.8-3.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/BaseOS/x86_64/os/Packages/gmp-6.2.0-11.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/gmp-c++-6.2.0-11.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/gmp-devel-6.2.0-11.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/nettle-devel-3.8-3.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/BaseOS/x86_64/os/Packages/libtasn1-4.16.0-8.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/libtasn1-tools-4.16.0-8.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/libtasn1-devel-4.16.0-8.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/libidn2-devel-2.3.0-7.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/p11-kit-devel-0.24.1-2.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/gnutls-devel-3.7.6-20.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/CRB/x86_64/os/Packages/libmicrohttpd-devel-0.9.72-4.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/lksctp-tools-devel-1.0.19-2.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/libzstd-devel-1.5.1-2.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/BaseOS/x86_64/os/Packages/snappy-1.1.8-8.el9.x86_64.rpm \
-    https://rpmfind.net/linux/epel/9/Everything/x86_64/Packages/m/mongo-c-driver-libs-1.23.5-1.el9.x86_64.rpm\
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/flex-2.6.4-9.el9.x86_64.rpm \
-    https://rpmfind.net/linux/epel/9/Everything/x86_64/Packages/m/mongo-c-driver-devel-1.23.5-1.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/bison-3.7.4-5.el9.x86_64.rpm
+COPY ubi/almalinux.repo /etc/yum.repos.d/
+COPY ubi/RPM-GPG-KEY-AlmaLinux-9 /etc/pki/rpm-gpg/
+RUN dnf install -y \
+       --enablerepo=almalinux-baseos \
+       --enablerepo=almalinux-appstream \
+       --enablerepo=almalinux-crb \
+            libmicrohttpd \
+            gnutls \
+            gnutls-c++ \
+            gnutls-dane \
+            nettle \
+            gmp \
+            gmp-c++ \
+            gmp-devel \
+            nettle-devel \
+            libtasn1 \
+            libtasn1-tools \
+            libtasn1-devel \
+            libidn2-devel \
+            p11-kit-devel \
+            gnutls-devel \
+            lksctp-tools-devel \
+            libzstd-devel \
+            snappy \
+            flex \
+            bison \     
+            libtalloc-devel \
+            libmicrohttpd-devel \
+            mongo-c-driver-libs \
+            mongo-c-driver-devel
 
 RUN	mkdir -p /opt/open5gs && \
       cd /tmp && \
@@ -93,40 +98,28 @@ LABEL org.opencontainers.image.authors="Alaitz Mendiola <alaitz@redhat.com>" \
       org.opencontainers.image.vendor="Red Hat Inc." \
       org.opencontainers.image.licenses="Apache-2.0" \
       org.opencontainers.image.version="$version"
-        
+
+COPY ubi/*.repo /etc/yum.repos.d/
+COPY ubi/RPM-GPG-KEY-* /etc/pki/rpm-gpg/
+
 RUN microdnf install -y \
-    info \
-    lksctp-tools \
-    iproute \
-    iputils \
-    procps-ng \
-    net-tools \
-    git \
-    make \        
-    pkgconf \
-    pkgconf-m4 \
-    libtalloc \
-    libtalloc.so.2  \
-    iptables && microdnf clean all
-
-RUN rpm -ivh \
-    https://rpmfind.net/linux/centos-stream/9-stream/BaseOS/x86_64/os/Packages/pkgconf-pkg-config-1.7.3-10.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/CRB/x86_64/os/Packages/libtalloc-devel-2.3.4-1.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/libmicrohttpd-0.9.72-4.el9.x86_64.rpm \
-    https://rpmfind.net/linux/epel/9/Everything/x86_64/Packages/l/libbson-1.23.5-1.el9.x86_64.rpm \
-    https://rpmfind.net/linux/epel/9/Everything/x86_64/Packages/l/libmongocrypt-1.8.1-1.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/BaseOS/x86_64/os/Packages/snappy-1.1.8-8.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/BaseOS/x86_64/os/Packages/libicu-67.1-9.el9.x86_64.rpm \
-    https://rpmfind.net/linux/epel/9/Everything/x86_64/Packages/m/mongo-c-driver-libs-1.23.5-1.el9.x86_64.rpm \
-    https://rpmfind.net/linux/epel/9/Everything/x86_64/Packages/m/mongo-c-driver-1.23.5-1.el9.x86_64.rpm \
-    https://rpmfind.net/linux/epel/9/Everything/x86_64/Packages/l/libidn-1.38-4.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/iperf3-3.9-9.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/AppStream/x86_64/os/Packages/tcpdump-4.99.0-6.el9.x86_64.rpm \
-    https://rpmfind.net/linux/centos-stream/9-stream/BaseOS/x86_64/os/Packages/traceroute-2.1.0-16.el9.x86_64.rpm
-
-RUN git clone https://github.com/magnific0/wondershaper && \
-    cd wondershaper && \
-    make install
+      --enablerepo=almalinux-baseos \
+      --enablerepo=almalinux-crb \
+      --enablerepo=almalinux-appstream \
+      --enablerepo=epel \
+      libtalloc-devel \
+      mongo-c-driver-libs \
+      libyaml \
+      info \
+      lksctp-tools \
+      libidn2 \
+      libmicrohttpd \
+      libnghttp2 \
+      iproute \
+      iputils \
+      procps-ng \
+      net-tools \
+      iptables && microdnf clean all
 
 ENV APP_ROOT=/opt/open5gs
 COPY --from=builder /opt/open5gs/bin ${APP_ROOT}/bin/
